--- a/_includes/backward-incompatible-changes/open-source/2.2.8-2.2.9.md
+++ b/_includes/backward-incompatible-changes/open-source/2.2.8-2.2.9.md
@@ -1,4 +1,4 @@
-### Class changes {#2.2.8-2.2.9-class}
+### Class changes   {#class-228-229}
 
 | What changed                                                                         | How it changed                              |
 |--------------------------------------------------------------------------------------|---------------------------------------------|
@@ -11,7 +11,7 @@
 | Magento\Reports\Model\ResourceModel\Product\Downloads\Collection::getSelectCountSql  | [public] Method has been added.             |
 | Magento\Catalog\Model\Category::beforeSave                                           | [public] Method has been added.             |
 
-### Interface changes {#2.2.8-2.2.9-interface}
+### Interface changes   {#interface-228-229}
 
 | What changed                                         | How it changed           |
 |------------------------------------------------------|--------------------------|
