--- a/_includes/backward-incompatible-changes/open-source/2.3.1-2.3.2.md
+++ b/_includes/backward-incompatible-changes/open-source/2.3.1-2.3.2.md
@@ -1,4 +1,4 @@
-### Class changes {#2.3.1-2.3.2-class}
+### Class changes {#class-231-232}
 
 | What changed                                                                        | How it changed                     |
 |-------------------------------------------------------------------------------------|------------------------------------|
@@ -16,14 +16,14 @@
 | Magento\Catalog\Ui\Component\Listing\Columns\Websites::applySorting                 | [protected] Method has been added. |
 | Magento\Catalog\Model\Category::beforeSave                                          | [public] Method has been added.    |
 
-### Interface changes {#2.3.1-2.3.2-interface}
+### Interface changes {#interface-231-232}
 
 | What changed                                       | How it changed       |
 |----------------------------------------------------|----------------------|
 | Magento\ImportExport\Api\ExportManagementInterface | Interface was added. |
 | Magento\ImportExport\Api\Data\ExportInfoInterface  | Interface was added. |
 
-### Class API membership changes {#2.3.1-2.3.2-class-api-membership}
+### Class API membership changes {#class-api-membership-231-232}
 
 | What changed                       | How it changed   |
 |------------------------------------|------------------|
